2008-05-01 Raphael Neider <rneider AT web.de>

	* device/include/pic16/adc.h,
	  device/lib/pic16/libio/adc/adcbusy.c,
	  device/lib/pic16/libio/adc/adcopen.c,
	  device/lib/pic16/libio/adc/adcsetch.c: support old 18f242 and new
	  18f2455 style ADC devices, based on patch #1776197
	* device/lib/pic16/libio/adc/adcclose.c,
	  device/lib/pic16/libio/adc/adcconv.c,
	  device/lib/pic16/libio/adc/adcread.c: cosmetic changes
	* device/include/pic16/{pic18f2331.h,pic18f2431.h},
	  device/lib/pic16/libdev/{pic18f2331.c,pic18f2431.c}: reuse 18f4331
	* device/include/pic16/pic18f4431.h,
	  device/lib/pic16/libdev/pic18f4431.c: remove outdated comments
	* device/lib/pic16/libio/adc.ignore: forbid unhandled devices

2008-05-01 Raphael Neider <rneider AT web.de>

	* src/pic16/device.h: removed unused field PIC16_device.sfrRange,
	  moved xinst flag into pic16_options_t
	* src/pic16/device.c (default_device, pic16_list_devices,
	  pic16_find_device): removed references to sfrrange
	* src/pic16/gen.c (genFunction),
	  src/pic16/glue.c (pic16initialComments),
	  src/pic16/main.c (pic16_optionsTable),
	  src/pic16/ralloc.c (newReg, pic16_writeUsedRegs): updated references
	  to xinst
	* device/include/pic16/pic16devices.txt: removed sfrrange lines

2008-04-29 Raphael Neider <rneider AT web.de>

	* src/pic16/devices.inc,
	  device/include/pic16/pic16devices.txt: replaced compiled-in list
	  of devices with a variant parsed at runtime
	* src/pic16/device.c: added support for parsing pic16devices.txt,
	  clean up
	* src/pic16/device.h: removed (now) unused fields from PIC_device
	* src/pic16/main.c: removed #pragma maxram,
	  (_pic16_initPaths): removed bogus generation of search paths,
	  setup the port proper only after the search paths (for
	  pic16devices.txt) are set up,
	  (_pic16_finaliseOptions): moved processor dependant code here
	  from _pic16_initPaths(), clean up
	* src/pic16/ralloc.c (pic16_init_stack),
	* src/pic16/ralloc.h,
	* src/pic16/pcode.c: clean up